hphp/hack/test/typecheck/explicit_type_collection_map.php
<?hh // partial
function explicit(): void {
  $x = Map<int, string> {};
}
